--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>File Upload Example</title>
+    <title>File Upload</title>
   </head>
   <body>
-    <h1>File Upload Example</h1>
+    <h1>File Upload</h1>
     <form method="POST" enctype="multipart/form-data" action="/upload">
       <input type="file" name="file">
       <br>
